--- a/web/src/app.css
+++ b/web/src/app.css
@@ -45,15 +45,15 @@ body {
 }
 
 ::-webkit-scrollbar {
-  width: 3px;
+  width: 2px;
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: #b3b3b3;
+  background-color: #bbbbbb;
 }
 
 ::-webkit-scrollbar-track {
-  background-color: #3a3a3a;
+  background-color: #666666;
 }
 
 @keyframes slideIn {
@@ -68,6 +68,16 @@ body {
   }
 }
 
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+}
+
 .wrapper {
   animation: slideIn 250ms forwards;
+}
+
+.fadeIn {
+  animation: fadeIn 250ms forwards;
 }
